# libgit2

./: .bazelrc  .bazelversion  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .tm_properties  .travis.yml  .vsts-ci.yml  AUTHORS  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  CONVENTIONS  CONVENTIONS.md  COPYING  FUNDING.json  FindHTTP_Parser.cmake  HEAD.json  LICENSE  LibGit2Config.cmake.in  MODULE.bazel  Makefile  Makefile.embed  PROJECTS.md  Package.swift  README  README.Editd  README.amiga  README.md  README.txt  Rakefile  SECURITY.md  TAGS  THREADING.md  (+214 more)
benchmarks/libgit2/: CMakeLists.txt  main.c  oid.c  precompiled.h
examples/: .gitignore  CMakeLists.txt  Makefile  README.md  add.c  apply.c  args.c  args.h  base.c  blame.c  branch.c  cat-file.c  checkout.c  clone.c  commit.c  common.c  common.h  config.c  describe.c  diff.c  fetch.c  for-each-ref.c  general.c  index-pack.c  init.c  last-changed.c  lg2.c  libgit.c  log.c  ls-files.c  merge.c  path.c  path.h  pull.c  push.c  rebase.c  remote.c  reset.c  rev-list.c  rev-parse.c  (+6 more)
examples/network/: Makefile  clone.c  common.c  common.h  fetch.c  git2.c  index-pack.c  ls-remote.c
examples/test/: test-rev-list.sh
fuzzers/: CMakeLists.txt  commit_graph_fuzzer.c  config_file_fuzzer.c  download_refs_fuzzer.c  fuzzer_utils.c  fuzzer_utils.h  midx_fuzzer.c  objects_fuzzer.c  packfile_fuzzer.c  revparse_fuzzer.c  standalone_driver.c  util_fuzzer.c
src/: #config.c#  .checkout.c.swp  CMakeLists.txt  README.md  alloc.c  alloc.h  annotated_commit.c  annotated_commit.h  apply.c  apply.h  array.h  assert_safe.h  atexit.c  atexit.h  attr.c  attr.h  attr_file.c  attr_file.h  attrcache.c  attrcache.h  backends.c  backends.h  base64.c  base64.h  bitvec.h  blame.c  blame.h  blame_git.c  blame_git.h  blob.c  blob.h  branch.c  branch.h  bswap.h  buf_text.c  buf_text.h  buffer.c  buffer.h  buffer.rs  cache.c  (+352 more)
src/allocators/: stdalloc.c  win32_crtdbg.c  win32_leakcheck.c
src/amiga/: map.c
src/backends/: hiredis.c  sqlite.c
src/block-sha1/: sha1.c  sha1.h
src/cli/: CMakeLists.txt  README.md  cli.h  cmd.h  cmd_add.c  cmd_blame.c  cmd_cat_file.c  cmd_clone.c  cmd_commit.c  cmd_config.c  cmd_hash_object.c  cmd_help.c  cmd_index_pack.c  cmd_init.c  cmd_version.c  common.c  common.h  console.h  error.c  error.h  global.c  global.h  main.c  opt.c  opt.h  opt_usage.c  opt_usage.h  progress.c  progress.h
src/compat/: fnmatch.c
src/git/: blob.h  commit.h  common.h  config.h.in  errors.h  fileops.h  index.h  object.h  odb.h  oid.h  repository.h  revwalk.h  tag.h  thread-utils.h  tree.h  zlib.h
src/git2/: blob.h  commit.h  common.h  compat.h  errors.h  index.h  object.h  odb.h  odb_backend.h  oid.h  refs.h  repository.h  revwalk.h  signature.h  tag.h  thread-utils.h  tree.h  types.h  zlib.h
src/hash/: hash_collisiondetect.c  hash_collisiondetect.h  hash_common_crypto.c  hash_common_crypto.h  hash_generic.c  hash_generic.h  hash_gnutls.h  hash_mbedtls.c  hash_mbedtls.h  hash_openssl.c  hash_openssl.h  hash_ppc.c  hash_ppc.h  hash_ppc_core.S  hash_win32.c  hash_win32.h  sha1.h
src/libgit2/: BUILD.bazel  CMakeLists.txt  annotated_commit.c  annotated_commit.h  apply.c  apply.h  attr.c  attr_file.c  attr_file.h  attrcache.c  attrcache.h  backend.c  backend.h  basecache.c  basecache.h  blame.c  blame.h  blame_git.c  blob.c  blob.h  branch.c  branch.h  buf_text.h  buffer.c  buffer.h  bundle.c  bundle.h  cache.c  cache.h  checkout.c  checkout.h  cherrypick.c  chunk_format.c  chunk_format.h  clone.c  commit.c  commit.h  commit_graph.c  commit_graph.h  commit_list.c  (+189 more)
src/libgit2client/: CMakeLists.txt  exec_filter.c  global.c  process.h  ssh_subtransport.c
src/mariadb/: mariadb_odb.c  mariadb_refdb.c
src/os/: unix.c
src/ppc/: sha1.c  sha1.h  sha1ppc.S
src/sha1/: sha1.c  sha1.h
src/streams/: curl.c  curl.h  emscripten_browser.c  emscripten_browser.h  emscripten_nodejs.c  emscripten_nodejs.h  mbedtls.c  mbedtls.h  openssl.c  openssl.h  openssl_dynamic.c  openssl_legacy.c  openssl_legacy.h  registry.c  registry.h  socket.c  socket.h  stransport.c  stransport.h  tls.c  tls.h  tls_ciphers.h
src/transports/: auth.c  auth.h  auth_negotiate.c  auth_negotiate.h  auth_ntlm.c  auth_ntlm.h  cookie.c  cookie.h  cred.c  cred.h  cred_helpers.c  credential.c  credential_helpers.c  emscriptenhttp.c  git.c  http.c  http.h  httpclient.c  httpclient.h  local.c  smart.c  smart.h  smart_pkt.c  smart_protocol.c  ssh.c  ssh.h  ssh_libssh.c  ssh_libssh2.c  util.c  util.h  winhttp.c
src/unix/: map.c  mmap.c  posix.h  posix_unix.c  pthread.c  pthread.h  realpath.c
src/util/: BUILD.bazel  CMakeCache.txt  CMakeLists.txt  alloc.c  alloc.h  array.h  buf_text.c  buf_text.h  buffer.c  buffer.h  cc-compat.h  ctype_compat.h  date.c  date.h  errors.c  errors.h  features.h.in  filebuf.c  fs_path.c  fs_path.h  futils.c  futils.h  git2_features.h.in  git2_util.h  hash.c  hash.h  hashmap.h  hashmap_str.h  integer.h  map.h  net.c  net.h  oid.c  oid.h  path.c  path.h  pool.c  pool.h  posix.c  posix.h  (+36 more)
src/win32/: buffer.c  dir.c  dir.h  error.c  fileops.c  findfile.c  findfile.h  fnmatch.c  fnmatch.h  git2.rc  git2.rc.cmake  map.c  mingw-compat.h  mmap.c  msvc-compat.h  path_w32.c  path_w32.h  posix.c  posix.h  posix_w32.c  precompiled.c  precompiled.h  pthread.c  pthread.h  reparse.h  thread.c  thread.h  utf-conv.c  utf-conv.h  utf8-conv.c  utf8-conv.h  version.h  w32_buffer.c  w32_buffer.h  w32_common.h  w32_crtdbg_stacktrace.c  w32_dosmaperr.c  (+8 more)
tests/: .gitignore  CMakeLists.txt  Makefile  NAMING  README.md  clar.c  clar.h  clar_libgit2.c  clar_libgit2.h  clar_libgit2_alloc.c  clar_libgit2_timer.c  clar_libgit2_timer.h  clar_libgit2_trace.c  clar_libgit_posix.c  clay  clay.h  clay_libgit2.h  clay_main.c  crlf-test-generator.7z  dirent.c  filebuf.c  generate.py  main.c  path.c  rmdir.c  string.c  t00-core.c  t0000-errno.c  t0000-obj-hash.c  t0000-oid.c  t0000-read1.c  t0000-read2.c  t0001-errno.c  t0002-refcnt.c  t0003-strutil.c  t0004-vector.c  t0005-path.c  t0020-dirent.c  t01-data.h  t01-rawobj.c  (+59 more)
(+6942 files in other folders)
